src/objects/Transaction_Detail__c.object
<CustomObject>
    <description>Dettaglio Transazioni Xstore / E-Commerce</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>CASESAFEID(Transaction__r.Account__c)</formula>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Data_Scontrino_Testata__c</fullName>
        <formula>IF(DATEVALUE(Data_Scontrino__c)!= DATEVALUE(Transaction__r.Data_Scontrino__c) , &apos;KO&apos;, &apos;OK&apos;)</formula>
        <label>Check Data Scontrino Testata</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkbox_18_09_2019__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 18/09/2019</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_20_09_2019__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 20/09/2019</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox_24_09_2019__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox 24/09/2019</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codice_Cassa__c</fullName>
        <label>Codice Cassa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Seller__c</fullName>
        <label>Codice Seller</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Scontrino_KPI__c</fullName>
        <label>Data Scontrino KPI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Scontrino__c</fullName>
        <label>Data Scontrino</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Full_Price__c</fullName>
        <formula>IF( Prezzo_di_Listino__c &lt;= Prezzo_di_Vendita__c , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IVA__c</fullName>
        <label>IVA</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Id_Location_Micros__c</fullName>
        <label>Id Location Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo_IVA__c</fullName>
        <formula>Prezzo_di_Vendita__c - ( Prezzo_di_Vendita__c / (1+IVA__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importo_Sconto__c</fullName>
        <description>Valore dello sconto applicato
Campo non passato da AS400 ma calcolato direttamente in SF</description>
        <formula>if ( 
Or (Prezzo_di_Listino__c - Prezzo_di_Vendita__c=0, (And (Prezzo_di_Listino__c &lt; Prezzo_di_Vendita__c, Prezzo_di_Listino__c&gt;0  )),
(And (Prezzo_di_Listino__c &gt; Prezzo_di_Vendita__c, Prezzo_di_Listino__c&lt;0  ))
), 
0 , 
Prezzo_di_Listino__c - Prezzo_di_Vendita__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Sconto (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importo_sconto_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Sconto_BRL__c, 
&quot;CAD&quot;, Sconto_CAD__c, 
&quot;CHF&quot;, Sconto_CHF__c, 
&quot;CNY&quot;, Sconto_CNY__c, 
&quot;EUR&quot;, Sconto_EUR__c, 
&quot;GBP&quot;, Sconto_GBP__c, 
&quot;HKD&quot;, Sconto_HKD__c, 
&quot;JPY&quot;, Sconto_JPY__c,
&quot;USD&quot;, Sconto_USD__c,
&quot;MOP&quot;, Sconto_MOP__c,
&quot;AUD&quot;, Sconto_AUD__c,
&quot;DKK&quot;, Sconto_DKK__c,
&quot;RUB&quot;, Sconto_RUB__c,
Importo_Sconto__c)</formula>
        <label>Importo Sconto (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Dettaglio_Transazione__c</fullName>
        <externalId>true</externalId>
        <label>Key Dettaglio Transazione</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>Numero_Scontrino__c &amp; Id_Location_Micros__c &amp; Codice_Cassa__c &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macro_categoria_colore__c</fullName>
        <formula>Product__r.Macro_Categoria_Colore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Macro categoria colore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivazione_Reso__c</fullName>
        <label>Motivazione Reso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>La taglia del prodotto non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il prodotto ricevuto è diverso da quello ordinato</fullName>
                </value>
                <value>
                    <fullName>Il colore non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il modello non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il tessuto non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Prodotto difettoso</fullName>
                </value>
                <value>
                    <fullName>La consegna è avvenuta in ritardo</fullName>
                </value>
                <value>
                    <fullName>Sto rendendo un regalo</fullName>
                </value>
                <value>
                    <fullName>Non voglio fornire alcuna motivazione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nome_Location__c</fullName>
        <formula>Transaction__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Reso__c</fullName>
        <label>Note Reso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numero_Scontrino__c</fullName>
        <label>Numero Scontrino</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSconto_AED__c</fullName>
        <label>% di Sconto (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_AUD__c</fullName>
        <label>% di Sconto (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_BRL__c</fullName>
        <label>% di Sconto (BRL)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_CHF__c</fullName>
        <label>% di Sconto (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_CNY__c</fullName>
        <label>% di Sconto (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_DKK__c</fullName>
        <label>% di Sconto (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_EUR__c</fullName>
        <label>% di Sconto (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_GBP__c</fullName>
        <label>% di Sconto (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_HKD__c</fullName>
        <label>% di Sconto (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_JPY__c</fullName>
        <label>% di Sconto (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_KRW__c</fullName>
        <label>% di Sconto (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_MOP__c</fullName>
        <label>% di Sconto (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_PLN__c</fullName>
        <label>% di Sconto (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_QAR__c</fullName>
        <label>% di Sconto (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_RUB__c</fullName>
        <label>% di Sconto (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_SAR__c</fullName>
        <label>% di Sconto (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_SGD__c</fullName>
        <label>% di Sconto (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_USD__c</fullName>
        <label>% di Sconto (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto__c</fullName>
        <formula>if 
( OR( Prezzo_di_Listino__c=0.00, ISBLANK(Prezzo_di_Listino__c )), 0, 

if ( 
(Importo_Sconto__c / Prezzo_di_Listino__c)&lt;0, 
0, 
Importo_Sconto__c / Prezzo_di_Listino__c 
) 
)</formula>
        <label>% Sconto (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pdi_Sconto_CAD__c</fullName>
        <label>% di Sconto (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_AED__c</fullName>
        <formula>Prezzo_di_vendita_AED__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_AUD__c</fullName>
        <formula>Prezzo_di_vendita_AUD__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_DKK__c</fullName>
        <formula>Prezzo_di_Vendita_DKK__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_EA__c</fullName>
        <description>Campo necessario per integrazione con Analytics</description>
        <formula>Prezzo_di_Vendita__c/( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA EA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_KRW__c</fullName>
        <formula>Prezzo_di_vendita_KRW__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_PLN__c</fullName>
        <formula>Prezzo_di_vendita_PLN__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_QAR__c</fullName>
        <formula>Prezzo_di_vendita_QAR__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_RUB__c</fullName>
        <formula>Prezzo_di_vendita_RUB__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_SAR__c</fullName>
        <formula>Prezzo_di_vendita_SAR__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_SGD__c</fullName>
        <formula>Prezzo_di_vendita_SGD__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_netto_IVA_BRL__c, 
&quot;CAD&quot;, Prezzo_netto_IVA_CAD__c, 
&quot;CHF&quot;, Prezzo_netto_IVA_CHF__c, 
&quot;CNY&quot;, Prezzo_netto_IVA_CNY__c, 
&quot;EUR&quot;, Prezzo_netto_iva_EUR__c, 
&quot;GBP&quot;, Prezzo_netto_IVA_GBP__c, 
&quot;HKD&quot;, Prezzo_netto_IVA_HKD__c, 
&quot;JPY&quot;, Prezzo_netto_IVA_JPY__c, 
&quot;USD&quot;, Prezzo_Netto_Iva_USD__c, 
&quot;MOP&quot;, Prezzo_netto_IVA_MOP__c,
&quot;AUD&quot;, Prezzo_Netto_IVA_AUD__c,
&quot;DKK&quot;, Prezzo_Netto_IVA_DKK__c,
&quot;RUB&quot;, Prezzo_Netto_IVA_RUB__c,
&quot;KRW&quot;, Prezzo_Netto_IVA_KRW__c, 
&quot;AED&quot;, Prezzo_Netto_IVA_AED__c, 
&quot;PLN&quot;, Prezzo_Netto_IVA_PLN__c, 
&quot;QAR&quot;, Prezzo_Netto_IVA_QAR__c, 
&quot;SGD&quot;, Prezzo_Netto_IVA_SGD__c, 
&quot;SAR&quot;, Prezzo_Netto_IVA_SAR__c, 
Prezzo_Netto_Iva__c)</formula>
        <label>Prezzo Netto IVA (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_Iva_USD__c</fullName>
        <formula>Prezzo_di_vendita_USD__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto Iva (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_Iva__c</fullName>
        <formula>Prezzo_di_Vendita__c/( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo Netto IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Listino_EUR__c</fullName>
        <label>Prezzo di listino (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Listino__c</fullName>
        <description>Prezzo di listino espresso nella valuta del negozio comprensivo di VAT</description>
        <label>Prezzo di Listino (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita_DKK__c</fullName>
        <label>Prezzo di Vendita (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita_EA__c</fullName>
        <description>Prezzo necessario per integrazione con Analytics, mostra il valore numerico del prezzo di vendita</description>
        <formula>Prezzo_di_Vendita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo di Vendita EA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita_EUR__c</fullName>
        <label>Prezzo di vendita (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita__c</fullName>
        <description>Prezzo effettivo pagato dal cliente lordo iva netto tasse- Ricavabile come full price - discount value</description>
        <label>Prezzo di Vendita (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_AED__c</fullName>
        <label>Prezzo di listino (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_AUD__c</fullName>
        <label>Prezzo di listino (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_BRL__c</fullName>
        <label>Prezzo di listino (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CAD__c</fullName>
        <label>Prezzo di listino (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CHF__c</fullName>
        <label>Prezzo di listino (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CNY__c</fullName>
        <label>Prezzo di listino (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_DKK__c</fullName>
        <label>Prezzo di listino (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_GBP__c</fullName>
        <label>Prezzo di listino (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_HKD__c</fullName>
        <label>Prezzo di listino (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_JPY__c</fullName>
        <label>Prezzo di listino (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_KRW__c</fullName>
        <label>Prezzo di listino (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_MOP__c</fullName>
        <label>Prezzo di listino (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_PLN__c</fullName>
        <label>Prezzo di listino (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_QAR__c</fullName>
        <label>Prezzo di listino (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_RUB__c</fullName>
        <label>Prezzo di listino (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_SAR__c</fullName>
        <label>Prezzo di listino (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_SGD__c</fullName>
        <label>Prezzo di listino (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_USD__c</fullName>
        <label>Prezzo di listino (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_di_listino_BRL__c, 
&quot;CAD&quot;, Prezzo_di_listino_CAD__c,
&quot;CHF&quot;, Prezzo_di_listino_CHF__c,
&quot;CNY&quot;, Prezzo_di_listino_CNY__c,
&quot;EUR&quot;, Prezzo_di_Listino_EUR__c,
&quot;GBP&quot;, Prezzo_di_listino_GBP__c,
&quot;HKD&quot;, Prezzo_di_listino_HKD__c,
&quot;JPY&quot;, Prezzo_di_listino_JPY__c,
&quot;USD&quot;, Prezzo_di_listino_USD__c,
&quot;MOP&quot;, Prezzo_di_listino_MOP__c,
&quot;AUD&quot;, Prezzo_di_listino_AUD__c,
&quot;DKK&quot;, Prezzo_di_listino_DKK__c,
&quot;RUB&quot;, Prezzo_di_listino_RUB__c,
&quot;KRW&quot;, Prezzo_di_listino_KRW__c, 
&quot;AED&quot;, Prezzo_di_listino_AED__c, 
&quot;PLN&quot;, Prezzo_di_listino_PLN__c, 
&quot;QAR&quot;, Prezzo_di_listino_QAR__c, 
&quot;SGD&quot;, Prezzo_di_listino_SGD__c, 
&quot;SAR&quot;, Prezzo_di_listino_SAR__c, 
Prezzo_di_Listino__c)</formula>
        <label>Retail price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_AED__c</fullName>
        <label>Prezzo di vendita (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_AUD__c</fullName>
        <label>Prezzo di vendita (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_BRL__c</fullName>
        <label>Prezzo di vendita (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CAD__c</fullName>
        <label>Prezzo di vendita (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CHF__c</fullName>
        <label>Prezzo di vendita (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CNY__c</fullName>
        <label>Prezzo di vendita (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_GBP__c</fullName>
        <label>Prezzo di vendita (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_HKD__c</fullName>
        <label>Prezzo di vendita (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_JPY__c</fullName>
        <label>Prezzo di vendita (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_KRW__c</fullName>
        <label>Prezzo di vendita (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_MOP__c</fullName>
        <label>Prezzo di vendita (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_PLN__c</fullName>
        <label>Prezzo di vendita (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_QAR__c</fullName>
        <label>Prezzo di vendita (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_RUB__c</fullName>
        <label>Prezzo di vendita (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_SAR__c</fullName>
        <label>Prezzo di vendita (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_SGD__c</fullName>
        <label>Prezzo di vendita (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_USD__c</fullName>
        <label>Prezzo di vendita (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_di_vendita_BRL__c, 
&quot;CAD&quot;, Prezzo_di_vendita_CAD__c, 
&quot;CHF&quot;, Prezzo_di_vendita_CHF__c, 
&quot;CNY&quot;, Prezzo_di_vendita_CNY__c, 
&quot;EUR&quot;, Prezzo_di_Vendita_EUR__c, 
&quot;GBP&quot;, Prezzo_di_vendita_GBP__c, 
&quot;HKD&quot;, Prezzo_di_vendita_HKD__c, 
&quot;JPY&quot;, Prezzo_di_vendita_JPY__c, 
&quot;USD&quot;, Prezzo_di_vendita_USD__c, 
&quot;MOP&quot;, Prezzo_di_vendita_MOP__c,
&quot;AUD&quot;, Prezzo_di_vendita_AUD__c,
&quot;DKK&quot;, Prezzo_di_Vendita_DKK__c,
&quot;RUB&quot;, Prezzo_di_vendita_RUB__c,
&quot;KRW&quot;, Prezzo_di_vendita_KRW__c, 
&quot;AED&quot;, Prezzo_di_vendita_AED__c, 
&quot;PLN&quot;, Prezzo_di_vendita_PLN__c, 
&quot;QAR&quot;, Prezzo_di_vendita_QAR__c, 
&quot;SGD&quot;, Prezzo_di_vendita_SGD__c, 
&quot;SAR&quot;, Prezzo_di_vendita_SAR__c, 
Prezzo_di_Vendita__c)</formula>
        <label>Prezzo di Vendita (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_pesato__c</fullName>
        <formula>CASE ( YEAR(DATEVALUE(Data_Scontrino__c)),
YEAR(today()), Prezzo_di_Vendita_EUR__c,
YEAR(today()) -1, Prezzo_di_Vendita_EUR__c * 0.9 ,
YEAR(today()) -2, Prezzo_di_Vendita_EUR__c * 0.8 ,
YEAR(today()) -3, Prezzo_di_Vendita_EUR__c * 0.7 ,
YEAR(today()) -4, Prezzo_di_Vendita_EUR__c * 0.6 ,
YEAR(today()) -5, Prezzo_di_Vendita_EUR__c * 0.5 ,
YEAR(today()) -6, Prezzo_di_Vendita_EUR__c * 0.4 ,
YEAR(today()) -7, Prezzo_di_Vendita_EUR__c * 0.3 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo di vendita pesato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_BRL__c</fullName>
        <formula>Prezzo_di_vendita_BRL__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CAD__c</fullName>
        <formula>Prezzo_di_vendita_CAD__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CHF__c</fullName>
        <formula>Prezzo_di_vendita_CHF__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CNY__c</fullName>
        <formula>Prezzo_di_vendita_CNY__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_GBP__c</fullName>
        <formula>Prezzo_di_vendita_GBP__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_HKD__c</fullName>
        <formula>Prezzo_di_vendita_HKD__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_JPY__c</fullName>
        <formula>Prezzo_di_vendita_JPY__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_MOP__c</fullName>
        <formula>Prezzo_di_vendita_MOP__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto IVA (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_iva_EUR__c</fullName>
        <formula>Prezzo_di_Vendita_EUR__c /( IVA__c +1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo netto iva (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Image_Reference__c</fullName>
        <label>Product Image Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IF(Product_Image_Reference__c != &apos;&apos;, SUBSTITUTE(IMAGE(&apos;/sfc/servlet.shepherd/version/download/$$$$$$$$$$$$$&apos;, &apos;product image&apos;,70,70) &amp; IF( ISPICKVAL(Tipo_Vendita__c, &apos;R&apos;), IMAGE(&apos;/resource/Close&apos;,&apos;none&apos;,25,25) , IMAGE(&apos;/resource/Approval&apos;,&apos;none&apos;,25,25)), &apos;$$$$$$$$$$$$$&apos;, Product_Image_Reference__c ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codice Articolo</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Dettagli Transazione</relationshipLabel>
        <relationshipName>Transaction_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantita__c</fullName>
        <description>Numerico positivo o negativo (reso)</description>
        <label>Quantità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returns_report__c</fullName>
        <formula>IF ( TEXT (Tipo_Vendita__c) = &quot;R&quot;,  Prezzo_di_vendita_formula__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_report__c</fullName>
        <formula>IF ( TEXT (Tipo_Vendita__c) &lt;&gt; &quot;R&quot; ,  Prezzo_di_vendita_formula__c   , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_AED__c</fullName>
        <label>Sconto (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_AUD__c</fullName>
        <label>Sconto (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_BRL__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_BRL__c - Prezzo_di_vendita_BRL__c =0, (And (Prezzo_di_listino_BRL__c &lt; Prezzo_di_vendita_BRL__c , Prezzo_di_listino_BRL__c &gt;0 )), 
(And (Prezzo_di_listino_BRL__c &gt; Prezzo_di_vendita_BRL__c , Prezzo_di_listino_BRL__c &lt;0 )) 
), 
0 , 
Prezzo_di_listino_BRL__c - Prezzo_di_vendita_BRL__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>